--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,15 @@
     "emeraldwalk.runonsave": {
         "commands": [
             {
-                "match": "*.ex",
-                "cmd": "mix format ${relativeFile}"
-            },
-            {
-                "match": "*.exs",
-                "cmd": "mix format ${relativeFile}"
+                "match": "\\.exs$|\\.ex$",
+                "cmd": "mix format ${file}"
             }
         ]
     },
-    "elixir.credo.credoConfiguration": "config/.credo.exs",
+    "elixirLinter.useStrict": true,
+    "elixir.credo.executePath": "/Users/bpeake/.asdf/shims/mix",
+    "elixir.credo.credoConfiguration": "/Users/bpeake/code/opencinema/vtc-ex/.credo.exs",
+    "elixir.credo.strictMode": true,
     "githubPullRequests.ignoredPullRequestBranches": [
         "qa"
     ]
